--- a/_sass/organisms/_primary-button.scss
+++ b/_sass/organisms/_primary-button.scss
@@ -7,6 +7,7 @@
 		letter-spacing: 0.0125em;
 		color: colors.brand(white, 0);
 		white-space: nowrap;
+		font-family: 'Wix Madefor Display';
 		
 		&:hover {
 			cursor: pointer;
