--- a/_sass/organisms/home.scss
+++ b/_sass/organisms/home.scss
@@ -40,16 +40,11 @@
 			font-weight: 700; 
 		}
 
-		p {
-			font-size: 1.5rem;
+		h4 {
 			max-width: 19ch;
-			text-align: left;
-			letter-spacing: 0.005rem;
-			color: colors.brand(gray, 600);
-
-			@media (min-width: bps.$L) {
-				font-size: 2rem;
-			}
+			font-weight: 500;
+			font-size: 2rem;
+			line-height: 132%; /* 2.64rem */ 
 		}
 	}
 
@@ -143,6 +138,12 @@
 			padding-right: 3.1rem;
 		}
 
+		div {
+			font-size: 1.625rem;
+			font-weight: 600;
+			line-height: 132%; /* 2.145rem */ 
+		}
+
 		p {
 			font-size: 1.375rem;
 			color: colors.brand(gray, 700);
@@ -201,6 +202,7 @@
 		padding-bottom: 4rem;
 
 		h2 {
+			width: 40rem;
 			padding-right: 4rem;
 			color: colors.brand(white, 0);
 		}
@@ -292,6 +294,8 @@
 
 		h2 {
 			padding-right: 2rem;
+			width: 24rem;
+			min-width: 22.875rem; 
 			text-wrap: nowrap;
 		}
 		p {
@@ -443,7 +447,6 @@
 		padding-right: 8rem;
 		p {
 			margin-bottom: 1.2rem;
-			font-family: "Wix Madefor Text";
 			font-size: 1.125rem;
 			line-height: 132%; /* 1.485rem */ 
 		}
