--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
                         small=true
                      %}
 				</div>
-                <button class="menu-toggle">{% t main.header.menu %}</button>
+                <button class="menu-toggle"</button>
 			</div>
 		</header>
 		<main id="hlavni-obsah" class="{{ page.main_class }}"> {{ content }}
