--- a/_sass/helpers/_base.scss
+++ b/_sass/helpers/_base.scss
@@ -66,7 +66,7 @@ body {
 main {
 	position: relative; // z-index context
 	z-index: z.index(page-content);
-	margin-top: 4rem;
+	margin-top: 0;
 
 	@media (min-width: bps.$L) {
 		margin-top: 7.25rem;
