--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .l-footer {
 	display: flex;
-	padding: 24px;
+	padding: 1.5rem;;
 	justify-content: space-between;
 	align-items: flex-start;
 	align-content: flex-start;
