--- a/_sass/organisms/_primary-button.scss
+++ b/_sass/organisms/_primary-button.scss
@@ -1,4 +1,8 @@
 .primary-button {
+	@media (max-width: bps.$L) {
+		width: 100%;
+	}
+
 	button {
 		border-radius: 24px;
 		border: 0rem;
@@ -16,10 +20,11 @@
 
 	.large {
 		font-size: sizes.$button-font-size-l;
-		padding: 1.125rem 2rem;
+		padding: 1rem 6rem;
 
-		@media (min-width: bps.$L) {
-			padding: 1rem 6rem;
+		@media (max-width: bps.$L) {
+			padding: 1.125rem 2rem;
+			width: 100%;
 		}
 	}
 
