--- a/_sass/settings/_breakpoints.scss
+++ b/_sass/settings/_breakpoints.scss
@@ -1,5 +1,7 @@
 /*
  * Shared breakpoints settings to use within `@media`.
  */
-$L: 58em;
-$XL: 85em;
+$S: 18.8rem; // 300px;
+$L: 58em; // 928px
+$XL: 78rem; // 1248px
+$XXL: 85em;  // 1360px
