--- a/_sass/helpers/_fonts.scss
+++ b/_sass/helpers/_fonts.scss
@@ -13,6 +13,22 @@ html {
 	font-family: 'Wix Madefor Text';
 	line-height: 1.5;
 	color: colors.brand(gray, 900);
+
+	@media (max-width: bps.$XL) {
+		font-size: 14px; 
+	}
+
+	@media (max-width: bps.$L) {
+		font-size: 16x; 
+	}
+
+	@media (max-width: bps.$S) {
+		font-size: 10px; 
+	}
+
+	// @media (max-width: bps.$XS) {
+	// 	font-size: 12px; 
+	// }
 }
 
 /* page headers */
