--- a/_sass/organisms/home.scss
+++ b/_sass/organisms/home.scss
@@ -11,10 +11,6 @@
 		padding: 5rem 2.5rem 0;
 	}
 
-	@media (min-width: bps.$XL) {
-		padding: 5rem 11rem 0;
-	}
-
 	.container {
 		align-items: center;
 		width: 100%;
@@ -88,6 +84,13 @@
 		@media (max-width: bps.$L) {
 			left: 0;
 			top: 0;
+			min-width: 100%
+		}
+
+		@media (max-width: 500px) {
+			left: -25%;
+			top: 0;
+			min-width: 150%
 		}
 	}
 
@@ -120,10 +123,6 @@
 	@media (max-width: bps.$L) {
 		padding: 4rem 1.5rem;
 	}
-
-	// @media (min-width: bps.$XL) {
-	// 	padding: 5rem 11rem 7rem;
-	// }
 
 	.container {
 		align-items: center;
@@ -230,10 +229,6 @@
 	@media (max-width: bps.$L) {
 		padding: 4.5rem 1.5rem;
 	}
-
-	// @media (min-width: bps.$XL) {
-	// 	padding: 15rem 7.5rem 7.5rem 7.5rem;
-	// }
 
 	.container {
 		align-items: center;
@@ -348,9 +343,6 @@
 		padding: 4.5rem 1.5rem;
 	}
 
-	// @media (min-width: bps.$XL) {
-	// 	padding: 7.5rem 7.5rem 7.5rem 7.5rem;
-	// }
 
 	.container {
 		align-items: center;
@@ -531,14 +523,12 @@
 		padding: 4.5rem 1.5rem;
 	}
 
-	// @media (min-width: bps.$XL) {
-	// 	padding: 8rem 7.5rem 7.5rem 7.5rem;
-	// }
-
 	.container {
 		align-items: center;
 		flex-direction: row;
 		width: 100%;
+		justify-content: space-between;
+    gap: 4em;
 
 		@media (max-width: bps.$L) {
 			flex-direction: column;
@@ -546,12 +536,10 @@
 	}
 
 	.left-container {
-		width: 60%;
-		padding-right: 8rem;
+    width: 30rem;
 
 		@media (max-width: bps.$L) {
 			width: 100%;
-			padding-right: 0;
 		}
 
 		p {
@@ -565,7 +553,6 @@
 	}
 
 	.right-container {
-		width: 40%;
 		display: flex;
 		flex-direction: column;
 		gap: 1.0rem;
@@ -578,8 +565,12 @@
 			display: flex;
 			gap: 1.0rem;
 
+			@media (max-width: bps.$L) {
+				flex-direction: column;
+			}
 			img {
 				flex: 1;
+				max-width: unset;
 			}
 		}
 	}
@@ -597,10 +588,6 @@
 	@media (max-width: bps.$L) {
 		padding: 4.5rem 1.5rem;
 	}
-
-	// @media (min-width: bps.$XL) {
-	// 	padding: 7.5rem 7.5rem 7.5rem 7.5rem;
-	// }
 
 	.container {
 		align-items: center;
@@ -627,15 +614,11 @@
 		}
 	}
 
-
 	.step-container {
 		width: 100%;
 		display: flex;
+		flex-wrap: wrap;
 		gap: 1.0rem;
-
-		@media (max-width: bps.$L) {
-			flex-direction: column;
-		}
 	}
 
 	.step {
@@ -715,9 +698,14 @@
 			position: absolute;
 			top: 50.6rem;
 			left: 45.6rem;
+			
+			@media (max-width: 1380px) {
+				display: none;
+			}
 
 			@media (max-width: bps.$L) {
 				left: 0rem;
+				display: block;
 			}
 		}
 	}
@@ -752,6 +740,7 @@
 
 	.tech-grid {
 		display: flex;
+		flex-wrap: wrap;
 		gap: 2rem;
 		width: 100%;
 		
@@ -842,9 +831,6 @@
 		padding: 4.5rem 1.5rem;
 	}
 
-	// @media (min-width: bps.$XL) {
-	// 	padding: 8rem 7.5rem 7.5rem 7.5rem;
-	// }
 
 	.container {
 		align-items: center;
@@ -853,9 +839,8 @@
 	}
 
 	.title {
-		width: 100%;
 		display: flex;
-		gap: 1.5rem;
+		gap: 15%;
 		margin-bottom: 4rem;
 
 		@media (max-width: bps.$L) {
@@ -864,7 +849,8 @@
 		}
 
 		h2 {
-			width: 75rem;
+			min-width: 17.5rem;
+
 			@media (max-width: bps.$L) {
 				width: 100%;
 			}
@@ -882,7 +868,7 @@
 	.table {
 		width: 100%;
 		display: flex;
-		gap: 12rem;
+		gap: 15%;
 
 		@media (max-width: bps.$L) {
 			flex-direction: column;
@@ -890,15 +876,17 @@
 		}
 
 		.categories {
-			width: 17.5rem;
+			min-width: 17.5rem;
 
 			.category {
+				text-wrap: nowrap;
 				padding: 1rem;
 				font-size: 1.125rem;
 				line-height: 132%; /* 1.485rem */ 
 			}
 			.active {
 				font-weight: 600;
+				border-radius: 0.25rem; 
 				background-color: colors.brand(red, 0);
 				color: colors.brand(white, 0);
 			}
@@ -907,6 +895,8 @@
 		.content {
 			display: flex;
 			flex-direction: row;
+			align-content: flex-start;
+    	flex-wrap: wrap;
 			gap: 1.5rem;
 
 			@media (max-width: bps.$L) {
@@ -968,6 +958,7 @@
 		width: 100%;
 		display: flex;
     justify-content: space-between;
+		flex-wrap: wrap;
 		gap: 2.5rem;
 
 		@media (max-width: bps.$L) {
