--- a/_sass/settings/_breakpoints.scss
+++ b/_sass/settings/_breakpoints.scss
@@ -2,6 +2,6 @@
  * Shared breakpoints settings to use within `@media`.
  */
 $S: 18.8rem; // 300px;
-$L: 58em; // 928px
+$L: 58rem; // 928px
 $XL: 78rem; // 1248px
-$XXL: 85em;  // 1360px
+$XXL: 85rem;  // 1360px
