--- a/_sass/organisms/home.scss
+++ b/_sass/organisms/home.scss
@@ -111,7 +111,7 @@
 	}
 }
 
-.what-we-do {
+#what-we-do {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -330,7 +330,7 @@
 	}
 }
 
-.about-us {
+#about-us {
 	justify-content: center;
 	align-items: center;
 	position: relative;
@@ -479,7 +479,7 @@
 	}
 }
 
-.join-us {
+#join-us {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -583,7 +583,7 @@
 	}
 }
 
-.how-we-work{
+#how-we-work{
 	justify-content: center;
 	align-items: center;
 	position: relative;
@@ -930,7 +930,7 @@
 	}
 }
 
-.contact {
+#contact {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
