--- a/_sass/organisms/_primary-button.scss
+++ b/_sass/organisms/_primary-button.scss
@@ -19,7 +19,7 @@
 	}
 
 	.large {
-		font-size: sizes.$button-font-size-l;
+		font-size: 1.125rem;
 		padding: 1rem 6rem;
 
 		@media (max-width: bps.$L) {
