! Clicking on logo navigated to 404

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 		<header class="l-header">
 			<div class="header-container">
 				<div class="left-container">
-					<a class="l-header-logo" href="{% if site.baseurl == '/' %}/{% else %}{{ site.baseurl | remove_first: '/'}}{% endif %}">
+					<a class="l-header-logo" href="#">
 						<img src="{{ site.assetsPath }}/img/advantageSolutions-logo.svg" alt="Advantage Solutions" alt="Advantage Solutions logo">
 					</a>
 					<nav class="l-header-main-menu">
