--- a/_includes/aboutUsCard.html
+++ b/_includes/aboutUsCard.html
@@ -4,10 +4,12 @@
 {% capture text %}
 {% t include.text %}
 {% endcapture %}
-<div class="card">
-    <div class="title-container">
-        <div class="card-title">{{ title }}</div>
-        <div class="line"></div>
+<div class="card-container">
+    <div class="card">
+        <div class="title-container">
+            <div class="card-title">{{ title }}</div>
+            <div class="line"></div>
+        </div>
     </div>
     <div class="back-side">
         <div class="back-side-text">
