~ Our work detail tiles are displayed in a column in mobile layout

--- a/_sass/organisms/home.scss
+++ b/_sass/organisms/home.scss
@@ -1001,6 +1001,10 @@
 		.tile-couple {
 			display: flex;
 			gap: 1.5rem;
+
+			@media (max-width: bps.$L) {
+				flex-direction: column;
+			}
 		}
 		
 		.tile.active-tile {
