+ Clicking on links in mobile menu closes the menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,19 +49,19 @@
 						<nav class="l-header-main-menu">
 							<ul aria-labelledby="l-header-main-menu-label">
 								<li>
-									<a href="#what-we-do""> {% t page-whatwedo.title %}</a>
+									<a class="header-link" href="#what-we-do""> {% t page-whatwedo.title %}</a>
 								</li>
 								<li>
-									<a href="#how-we-work">{% t page-howwework.title %}</a>
+									<a class="header-link" href="#how-we-work">{% t page-howwework.title %}</a>
 								</li>
 								<li>
-									<a href="#about-us">{% t page-aboutus.title %}</a>
+									<a class="header-link" href="#about-us">{% t page-aboutus.title %}</a>
 								</li>
 								<li>
-									<a href="#join-us">{% t page-workwithus.title %}</a>
+									<a class="header-link" href="#join-us">{% t page-workwithus.title %}</a>
 								</li>
 								<li>
-									<a href="#contact">{% t page-contact.title %}</a>
+									<a class="header-link" href="#contact">{% t page-contact.title %}</a>
 								</li>
 							</ul>
 						</nav>
