--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -26,13 +26,15 @@
 	left: 0;
 	width: 100%;
 	background: colors.brand(white, 1);
-	border-bottom: 1px solid var(--Red-Red, #E82929); 
+	backdrop-filter: unset; 
+	border-bottom: 1px solid colors.brand(red, 0);
 	transition: all 0.15s cubic-bezier(0.075, 0.82, 0.165, 1);
 
 	@media (max-width: bps.$L) {
 		padding: 1.5rem;
 		position: relative;
-		margin-bottom: 16rem;
+		background: linear-gradient(197deg, #FFF 13.31%, rgba(255, 255, 255, 0.00) 111.95%), linear-gradient(199deg, #FFF 56.17%, rgba(255, 255, 255, 0.00) 99.92%);
+		backdrop-filter: blur(1px); 			
 	}
 
 	@media (min-width: bps.$XXL) {
@@ -58,31 +60,51 @@
 		height: 100%;
 		position: fixed;
 
-		@media (min-width: bps.$L) {
-			height: auto;
-		}
-
 		.l-header-main-menu {
 			display: flex;
+			justify-content: flex-end;
+
+			ul {
+				align-items: flex-end;
+				gap: 1.5rem;
+
+				li:first-of-type a {
+					color: colors.brand(red, 0);
+					font-weight: 800;
+				}
+
+				a {
+					font-weight: 600;
+					font-size: 1.5rem; 
+					padding-top: 0;
+					padding-bottom: 0;
+				}
+			}
 		}
 
 		.l-header-buttons {
 			display: flex;
+			align-items: flex-end;
+			margin-right: 3.1rem;
 		}
 
 		.l-header-logo {
-			position: absolute;
+			display: none;
+		}
 
-			@media (min-width: bps.$L) {
-				position: static;
-			}
+		.header-container{
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			margin-top: 10rem;
 		}
 
 		.menu-toggle {
 			position: absolute;
+			margin-top: 1rem;
 
-			@media (min-width: bps.$L) {
-				position: static;
+			&::before {
+				background: url("/assets/img/icons/close_button.svg") no-repeat center;
 			}
 		}
 	}
@@ -95,6 +117,7 @@
 		justify-content: space-between;
 
 		.left-container {
+			width: 100%;
 			display: flex;
 			flex-direction: row;
 			align-items: center;
@@ -103,11 +126,6 @@
 }
 
 .l-header-logo {
-
-	// @media (min-width: bps.$L) {
-	// 	position: static;
-	// }
-
 	img {
 		max-height: 100%;
 		width: auto;
@@ -119,7 +137,6 @@
 .l-header-main-menu {
 	font-weight: 500;
 	flex-grow: 1;
-	position: absolute;
 	top: 6rem;
 	left: 0;
 	width: 100%;
@@ -177,7 +194,6 @@
 }
 
 .l-header-buttons {
-	position: absolute;
 	bottom: 1.5rem;
 	left: 0;
 	width: 100vw;
@@ -207,15 +223,12 @@
 		&:hover {
 			text-decoration: underline;
 		}
-
-		img {
-			height: 1.25rem;
-		}
 	}
 
 	a:last-of-type button {
 		padding: 1rem 2.5rem;
 		font-size: 1.25rem;
+		display: none;
 
 		@media (min-width: bps.$L) {
 			font-size: 1rem;
@@ -225,7 +238,7 @@
 }
 
 .menu-toggle {
-	height: 48px;
+	height: 3rem;
 	border: 0;
 	background: 0;
 	font-weight: 500;
@@ -254,14 +267,7 @@
 	}
 }
 
-.menu-visible .menu-toggle
-{
-	margin: 1.5rem;
 
-	&::before {
-		background: url("/assets/img/icons/close_button.svg") no-repeat center;
-	}
-}
 
 /* first level item */
 .l-header-main-menu p,
