--- a/_sass/organisms/home.scss
+++ b/_sass/organisms/home.scss
@@ -6,9 +6,11 @@
 	overflow: hidden;
 	z-index: 1;
 	padding: 1.5rem 1.5rem 0;
+	margin-top: 16rem;
 
 	@media (min-width: bps.$L) {
 		padding: 5rem 2.5rem 0;
+		margin-top: 0;
 	}
 
 	.container {
