! menu and menu close icons were not loaded in test

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,10 @@
 													small=true
 											%}
 					</div>
-									<button class="menu-toggle"</button>
+									<button class="menu-toggle">
+										<img id="menu-icon" src="{{ site.assetsPath }}/img/icons/menu_icon.svg" alt="Menu icon">
+										<img id="close-icon" src="{{ site.assetsPath }}/img/icons/close_button.svg" alt="Close icon">
+									</button>
 				</div>
 			</header>
 			<main id="hlavni-obsah" class="{{ page.main_class }}"> {{ content }}
